# midah

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tauri.conf.json  vite.config.ts
capabilities/: migrated.json
src/: App.tsx  index.css  types.ts
src-tauri/src/: app_handlers.rs  database.rs  hotkeys.rs  main.rs  soundboard.rs  updater.rs
src-tauri/src/audio/: commands.rs  engine.rs  manager.rs  mod.rs  source.rs
src/components/: CategorySidebar.tsx  Header.tsx  HotkeyInput.tsx  HotkeySetting.tsx  Navigation.tsx  PlaybackProgress.tsx  PlayingDrawer.tsx  SoundCard.tsx  SoundCardMenu.tsx  SoundControls.tsx  SoundListItem.tsx  SoundMenuButton.tsx  SoundVolumeSlider.tsx  VideoCard.tsx  ViewToggle.tsx  VolumeSlider.tsx  WaveformAnimation.tsx  YouTubeSearch.tsx
src/contexts/: DependencyContext.tsx
src/hooks/: useAudio.ts  useHotkeys.ts  useSounds.ts  useUpdater.ts  useViewPreference.ts  useYouTube.ts
