[package]
name = "midah"
version = "1.0.0"
edition = "2021"
build = "src-tauri/build.rs"

[build-dependencies]
tauri-build = { version = "2", features = ["config-json5"] }

[dependencies]
once_cell = "1.18"
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full", "time"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
cpal = "0.15"
hound = "3.5"
rodio = "0.17"
symphonia = { version = "0.5", features = ["all"] }
tempfile = "3.8"
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"
thiserror = "1.0"
regex = "1.0"
dirs = "5.0"
rusqlite = { version = "0.29", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zip = "0.6"
flate2 = "1.0"
xz2 = "0.1"
tar = "0.4"
windows = { version = "0.48", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
futures-util = "0.3"
global-hotkey = "0.7"
crossbeam-channel = "0.5.15"
rdev = "0.5.3"
num-traits = "0.2.19"


[features]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "midah"
path = "src-tauri/src/main.rs"

